2008-04-09  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/apt-utils.h (APT_METHOD_PATH): Location of the methods that APT can
	use to retrieve lists of packages.
	* src/repo.cc (repository_uri_is_valid): This function checks that the
	given repository location can be used by APT; basically, its format must be
	<valid APT method>:<address>
	(cat_edit_response): Updated so it uses the previous function to validate
	the repository address entered by the user; it also removes leading and
	trailing whitespaces from it (N83553). 

2008-04-08  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-utils.h, src/apt-utils.cc: New.
	* src/Makefile.am: Use them for the hildon-application-manager.
	Link it with libapt-pkg.
	* src/main (CmpFragment, DoCmpVersion): Removed.
	(compare_versions): Use the new compare_deb_versions from
	apt-utils.h instead.

2008-04-07  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (CmpFragment, DoCmpVersion): New, from libapt-pkg.
	(compare_versions): Use them instead of doing it ourselves.

2008-04-07  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/main.cc (compare_versions) : instead of simply using
	g_ascii_strcasecmp, now we split the version strings and
	compare them token by token (N83764).

2008-04-04  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.h (start_entertaining_user): Added a new
	parameter, with_button, to allow creating an entertaining dialog
	without cancel button when needed. Updated callers (N75393).

	* src/operations.cc (ip_ensure_network): Updated so it now calls
	to start_entertaining_user with TRUE (N75393).
	(ip_abort_response): Likewise (N75393).
	(if_install): Likewise (N75393).
	(up_remove_with_info): Updated so it now calls to
	start_entertaining_user with FALSE (N75393).

	* src/main.cc (refresh_package_cache_without_user): Updated so it
	now calls to start_entertaining_user with TRUE (N75393).

2008-04-03  Marius Vollmer  <marius.vollmer@nokia.com>
